@@ -1,3 +1,9 @@
+2002-03-25  Mark McLoughlin  <mark@skynet.ie>
+
+	* configure.in: check for gethostbyname2.
+
+	* esd.c: call gethostbyname if gethostbyname2 isn't available.
+
 2002-03-13  chris chabot <chabotc@reviewboard.com>
 
     * Cleaned up spec file, added .pc file to its file list,
